# Qwen_ONNX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/onnx/: onnxruntime.hpp
source/: main.cpp
source/onnx/: onnxruntime.cpp
